--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "chartjs-plugin-zoom": "^2.2.0",
+    "lucide-react": "^0.511.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
